--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
    <application
-        android:label="exploring_widgets"
+        android:label="My Cool App"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
