--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: '^0.9.2'
+  flutter_app_name: ^0.1.0
+
+flutter_app_name:
+  name: 'Exploring Widgets'
 
 flutter_icons:
   android: 'launcher_icon'
